<resources>
    <string name="app_name">Medicines</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your medicines</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="today">Today</string>
    <string name="all">All</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="communicate">Communicate</string>
    <string name="send">Send</string>
    <string name="here_will_be_list_of_medicines">Here will be list of medicines.</string>
    <string name="stock">Stock</string>
    <string name="dose">Dose</string>
    <string name="how_many_times_a_day">How many times a day?</string>
    <string name="remind_me">Remind me</string>
    <string name="time">Time</string>
    <string name="stay">Stay for</string>
    <string name="how_many_medicines_do_you_have">How many medicines do you have?</string>
    <string name="editor_activity_title_new_medicine">Add new medicine</string>
    <string name="editor_activity_title_edit_medicine">Edit a medicine</string>
    <string name="name_error">You must put the name of medicine!</string>
    <string name="quantity_error">You must put the quantity of medicine!</string>
    <string name="one_dose_error">You must put one dose!</string>
    <string name="times_error">You must put how many times a day!</string>
    <string name="the_name_of_medicine">The name of medicine</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_delete_medicine_failed">Error with deleting medicine</string>
    <string name="editor_delete_medicine_successful">Medicine deleted</string>
    <string name="times_by_day">Times by day:</string>
    <string name="one_dose">One dose:</string>
    <string name="stack">Stack:</string>
    <string name="remind">Remind</string>
    <string-array name="times">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>
</resources>
