<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="6dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/medicineName"
            android:layout_width="400dp"
            android:layout_height="40dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Vit. C" />

        <TextView
            android:id="@+id/timesByDayView"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_below="@id/medicineName"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:text="@string/times_by_day"
            app:layout_constraintEnd_toStartOf="@+id/medicineTimes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medicineName" />


        <TextView
            android:id="@+id/medicineTimes"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/medicineName"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:layout_toRightOf="@id/timesByDayView"
            android:padding="10dp"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/timesByDayView"
            app:layout_constraintTop_toBottomOf="@+id/medicineName"
            tools:text="1" />

        <TextView
            android:id="@+id/oneDoseQuestionView"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_below="@id/medicineName"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:layout_toRightOf="@id/medicineTimes"
            android:padding="10dp"
            android:text="@string/one_dose"
            app:layout_constraintEnd_toStartOf="@+id/medicineOneDose"
            app:layout_constraintTop_toBottomOf="@+id/medicineName" />


        <TextView
            android:id="@+id/medicineOneDose"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/medicineName"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:layout_toRightOf="@id/oneDoseQuestionView"
            android:padding="10dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medicineName"
            tools:text="1" />

        <TextView
            android:id="@+id/quantityQuestionView"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_below="@id/timesByDayView"
            android:layout_marginStart="120dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:text="@string/stack"
            app:layout_constraintEnd_toStartOf="@+id/medicineQuantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medicineName" />


        <TextView
            android:id="@+id/medicineQuantity"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_below="@id/timesByDayView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="100dp"
            android:layout_toRightOf="@id/quantityQuestionView"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/quantityQuestionView"
            app:layout_constraintTop_toBottomOf="@+id/medicineName"
            tools:text="20" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>